--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 services:
   chroma:
-  image: chroma/chroma:latest
-  container_name: chroma
-  environment:
+    image: chromadb/chroma:1.0.20
+    container_name: chroma
+    environment:
       - CHROMA_SERVER_HOST=0.0.0.0
       - CHROMA_SERVER_HTTP_PORT=8000
       - ANONYMIZED_TELEMETRY=False 
-  ports:
-    - "8001:8000"
-  volumes:
-    - ./chroma_data:/chroma/.chromadb
+    ports:
+      - "8001:8000"
+    volumes:
+      - ./chroma_data:/chroma/.chromadb
 
   api:
     build:
@@ -20,7 +20,22 @@ services:
     environment:
       - CHROMA_HOST=chroma
       - CHROMA_PORT=8000
-      - EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
+      - CHROMA_TENANT=default_tenant
+      - CHROMA_DATABASE=default_database
+      - CHROMA_COLLECTION=resoluciones_cu 
+
+      # LMStudio connection
+      - LLM_BASE_URL=http://host.docker.internal:1234/v1
+      - LLM_MODEL=mistralai/magistral-small
+      - LLM_API_KEY=notused
+      - MAX_ANSWER_CHUNKS=6
+      - TOP_K=12
+
+      #Embeddings via LMStudio
+      - EMBED_BASE_URL=http://host.docker.internal:1234/v1
+      - EMBED_MODEL=nomic-ai/nomic-embed-text-v1.5-GGUF
+      - EMBED_API_KEY=notused
+
     volumes:
       - ./app:/app
       - ./data:/data
