--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
       # LMStudio connection
       - LLM_BASE_URL=http://host.docker.internal:1234/v1
-      - LLM_MODEL=meta-llama-3.1-8b-instruct
+      - LLM_MODEL=mistral-7b-instruct-v0.2
       - LLM_API_KEY=notused
       - MAX_ANSWER_CHUNKS=6
       - TOP_K=12
