--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ sentence-transformers==3.0.1
 torch==2.3.1
 openai>=1.42.0
 
+# Tokenizador para modelos OpenAI y similares
+tiktoken==0.11.0
+
+# Procesamiento de lenguaje natural
+spacy==3.8.7
+
