--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,16 +27,16 @@ services:
 
       # LMStudio connection
       - LLM_BASE_URL=http://host.docker.internal:1234/v1
-      - LLM_MODEL=mistral-7b-instruct-v0.3
+      - LLM_MODEL=openai/gpt-oss-20b
       - LLM_API_KEY=notused
-      - MAX_ANSWER_CHUNKS=6
-      - TOP_K=12
-      - TEMPERATURE=0.3
-      - MAX_TOKENS=1000
+      - MAX_ANSWER_CHUNKS=8
+      - TOP_K=8
+      - TEMPERATURE=0.2
+      - MAX_TOKENS=1200
 
       # Document chunking settings
-      - CHUNK_MAX_TOKENS=400
-      - CHUNK_OVERLAP_TOKENS=80
+      - CHUNK_MAX_TOKENS=1000
+      - CHUNK_OVERLAP_TOKENS=0
       - CHUNK_USE_SPACY=1
       - SPACY_MODEL=es_core_news_sm
       - SPACY_MAX_LENGTH=5000000
@@ -49,7 +49,7 @@ services:
 
       #Embeddings via LMStudio
       - EMBED_BASE_URL=http://host.docker.internal:1234/v1
-      - EMBED_MODEL=nomic-ai/nomic-embed-text-v1.5-GGUF
+      - EMBED_MODEL=text-embedding-bge-m3
       - EMBED_API_KEY=notused
 
     volumes:
