--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   chroma:
     image: chromadb/chroma:1.0.20
@@ -30,9 +29,9 @@ services:
       - LLM_MODEL=openai/gpt-oss-20b
       - LLM_API_KEY=notused
       - MAX_ANSWER_CHUNKS=8
-      - TOP_K=8
+      - TOP_K=50
       - TEMPERATURE=0.2
-      - MAX_TOKENS=1200
+      - MAX_TOKENS=1600
 
       # Document chunking settings
       - CHUNK_MAX_TOKENS=1000
@@ -49,7 +48,7 @@ services:
 
       #Embeddings via LMStudio
       - EMBED_BASE_URL=http://host.docker.internal:1234/v1
-      - EMBED_MODEL=text-embedding-bge-m3
+      - EMBED_MODEL=text-embedding-nomic-embed-text-v1.5@f32
       - EMBED_API_KEY=notused
 
     volumes:
