--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
 
       #Embeddings via LMStudio
       - EMBED_BASE_URL=http://host.docker.internal:1234/v1
-      - EMBED_MODEL=text-embedding-nomic-embed-text-v1.5@f32
+      - EMBED_MODEL=text-embedding-nomic-embed-text-v1.5
       - EMBED_API_KEY=notused
 
     volumes:
