--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,22 +34,27 @@ services:
       - MAX_TOKENS=1600
 
       # Document chunking settings
-      - CHUNK_MAX_TOKENS=1000
-      - CHUNK_OVERLAP_TOKENS=0
+      - CHUNK_MAX_TOKENS=600
+      - CHUNK_OVERLAP_TOKENS=50
       - CHUNK_USE_SPACY=1
       - SPACY_MODEL=es_core_news_sm
       - SPACY_MAX_LENGTH=5000000
 
       # BM25 settings
       - BM25_INDEX_DIR=/data/whoosh_index
-      - K_LEX=200
+      - K_LEX=100
       - RERANK_TOP=24
-      - RRF_K=60
+      - RRF_K=30
 
       #Embeddings via LMStudio
       - EMBED_BASE_URL=http://host.docker.internal:1234/v1
       - EMBED_MODEL=text-embedding-nomic-embed-text-v1.5@f32
       - EMBED_API_KEY=notused
+
+      #MODS
+      - USE_HYDE=1
+      - USE_MULTIQUERY=1
+      - MULTIQUERY_N=3
 
     volumes:
       - ./app:/app
