--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       - BM25_INDEX_DIR=/data/whoosh_index
       - K_LEX=100
       - RERANK_TOP=24
-      - RRF_K=30
+      - RRF_K=60
 
       # Configuración de embeddings a través del servicio interno
       # 'host.docker.internal' es una dirección especial que desde el contenedor
@@ -75,6 +75,10 @@ services:
       - EMBED_MODEL=littlejohn-ai/bge-m3-spa-law-qa
       - EMBED_API_KEY=notused
 
+      #Configuración de reranker
+      - RERANKER_BASE_URL=http://host.docker.internal:1245/v1
+      - RERANKER_MODEL=jina-reranker-v3-mlx
+
       # --- Conexión al Servicio de Agentes ---
       - FILTER_AGENT_URL=http://agents_service:8020/query-filters
 
@@ -82,6 +86,7 @@ services:
       - USE_HYDE=0
       - USE_MULTIQUERY=1
       - MULTIQUERY_N=3
+      - RERANKER_ENABLED=1
 
     volumes:
       - ./app:/app
